# sshcp

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/sshcp/: __init__.py  __main__.py  bookmarks.py  cli.py  config.py  conflict.py  selector.py  ssh_config.py  sync.py  transfer.py  watch.py
