[project]
name = "sshcp"
version = "0.2.2"
description = "Easy SSH file copy CLI tool with persistent server selection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "watchdog>=4.0.0",
    "simple-term-menu>=1.6.0",
]

[project.scripts]
sshcp = "sshcp.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sshcp"]

